[tool.poetry]
name = "tradehub"
version = "0.1.0"
description = "Python Client to interact with the Switcheo Tradehub Blockchain to manage staking, liquidity pools, governance, and trading on Demex."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
ecdsa = "^0.16.1"
bech32 = "^1.2.0"
mnemonic = "^0.19"
hdwallets = "^0.1.2"
jsons = "^1.3.1"
base58 = "^2.1.0"
web3 = "^5.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
